# TheStandardGuyLeakDetector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  install.bat  install.sh
cmake/: detektConfig.cmake.in
src/: CMakeLists.txt  allocation.cpp  allocation.h  detekt.h  detektor.cpp  detektor.h  linked_list.h  os.cpp  os.h  tsld.cpp  tsld.h
test/: CMakeLists.txt  container_leak.cpp  container_leak.h  main.cpp
